--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 hello world from Mikhail Martynov
+<html>
+    <header>
+        <meta charset="UTF-8">
+        <img src="Логотип.jpg">
+        <nav>
+            <a href="index.html">Главная</a>
+            <a href="contacts.html">Контакты</a>
+        </nav>
+    </header>
+    <body>
+        <h1>dolorem ipsum, quia</h1>
+        <p>dolor sit, amet, consectetur, adipisci velit</p>
+        <h3>sed quia non</h3>
+        <h4>numquam eius modi tempora incidunt</h4>
+        <p>ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam</p>
+        <h3>quis nostrum exercitationem</h3>
+        <p>ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi </p>
+        <hr>
+    </body>
+    <footer>
+        <h3>consequatur? Quis autem</h3>
+        <p>vel eum iure reprehenderit, qui in ea voluptate velit esse</p>
+        <hr>
+        Список контактов<br/>
+        quam nihil molestiae consequatur, vel<br/>
+        +79997771337<br/>
+        mail@commerce.com<br/>
+        <p>Все права защищены</p>
+    </footer>
+</html>
