--- a/contacts.html
+++ b/contacts.html
@@ -20,8 +20,8 @@
         </ul>
         <h4>Online Service</h4>
         <ul>
-            <a href="google.com">Сайт</a>
-            <a href="mail@gmail.com">Почта</a>
+            <a href="http://www.google.com">Сайт</a>
+            <a href="mailto:user@example.ru">Почта</a>
         </ul>
         <h4>Send us message</h4>
         <form>
