--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,12 @@
 <html>
     <header>
         <meta charset="UTF-8">
-        <img src="Логотип.jpg">
-        <nav>
-            <a href="#">Главная</a>
-            <a href="#">Контакты</a>
-        </nav>
+        <link rel="stylesheet" href="./src/assets/styles/style.css">
+        <img src="static/logo.png">
+        <ul class="breadcrumb">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
     </header>
     <body>
         <h2>Contact Us</h2>
@@ -28,7 +29,7 @@
             Full Name <input type="text" name="FullName" id="fname" value="Иванов Иван Иванович"/><br/>
             Email <input type="email" name="Email" id="email" value="name@example.com"/><br/>
             Message <textarea></textarea>
-            <input type="submit" value="submit"/>
+            <input type="submit" value="submit" nam/>
         </form>
     </body>
     <footer>
