--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@ hello world from Mikhail Martynov
 <html>
     <header>
         <meta charset="UTF-8">
-        <img src="Логотип.jpg">
-        <nav>
-            <a href="index.html">Главная</a>
-            <a href="contacts.html">Контакты</a>
-        </nav>
+        <link rel="stylesheet" href="./src/assets/styles/style.css">
+        <img src="static/logo.png">
+        <ul class="breadcrumb">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
     </header>
     <body>
         <h1>dolorem ipsum, quia</h1>
