--- a/index.html
+++ b/index.html
@@ -1,1 +1,251 @@
-hello world from Mikhail Martynov
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<header class="site_header">
+    <div class="green">
+        <h1>IT WEBSITE</h1>
+        <nav>
+            <ul>
+                <li><a>Services</a></li>
+                <li><a>Media</a></li>
+                <li><a>Cases</a></li>
+                <li><a>FAQ</a></li>
+                <li><a>Contacts</a></li>
+            </ul>
+        </nav>
+        <p>num1</p>
+        <p>num2</p>
+        <p>mail</p>
+    </div>
+    <hr>
+</header>
+<body>
+<div class="green">
+    <div class="red">
+        <h1>
+            Development of mobile applications and web services of any complexity
+        </h1>
+        <p>
+            We create mobile applications for iOS, Android that transfer your business to mobile applications of your customers' devices
+        </p>
+    </div>
+    <div class="red">
+        <h3>
+            Leave your contacts and we will call you back within 30 minutes
+        </h3>
+        <div class="yellow">
+            <form>
+                <label for="pnum">Phone number</label>
+                <input type="number" name="pnum" id="pnum">
+                <label for="flname">Full name</label>
+                <input type="text" name="flname" id="flname">
+                <input type="submit" value="Get consultation">
+            </form>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <div class="red">
+        <h1>Full development cycle</h1>
+        <p>We use proven technologies</p>
+        <h3>Web</h3>
+        <p>PHP/Javascript/Node.JS/Web Socket/Socket.io/Vue.js/Nuxt/MySQL/Laravel/GO lang/Django/Python</p>
+        <h3>Mobile</h3>
+        <p>Swift/Kotlin/Alamofire/Firebase/CoreData/Room/Realm/Coroutine/RxJava/RxSwift/Unit Test/Navigation</p>
+    </div>
+    <div class="red">
+        <ul>
+            <li>
+                <div class="blue">
+                    <p>iOS Development</p>
+                </div>
+            </li>
+            <li>Android development</li>
+            <li>Web development</li>
+            <li>UI/UX design</li>
+            <li>Testing</li>
+            <li>Launch</li>
+            <li>IT consulting</li>
+        </ul>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <h1>Developed more than 100 projects in 15 industries</h1>
+    <div class="red">
+        <ul>
+            <li>
+                <div class="blue">
+                    <p>Social media</p>
+                </div>
+            </li>
+            <li>Fitness and sport</li>
+            <li>Bank</li>
+            <li>Construction</li>
+            <li>Game projects</li>
+        </ul>
+        <ul>
+            <li>Education</li>
+            <li>Auto, transport</li>
+            <li>Medicine, health</li>
+            <li>Restaurants, food delivery</li>
+            <li>Marketplaces</li>
+        </ul>
+        <ul>
+            <li>AR technology</li>
+            <li>TV series</li>
+            <li>Startups</li>
+            <li>Religion</li>
+            <li>Online courses</li>
+        </ul>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <h1>Projects we are proud of</h1>
+    <p>Our software development company is truly proud of the wonderful clients we have worked with. We enjoy a long-term partnership</p>
+    <div class="red">
+        <ul>
+            <li>
+                <div class="blue">
+                    <p>I-teka</p>
+                </div>
+            </li>
+            <li>Dauletten</li>
+            <li>Guru Bosch</li>
+            <li>Santo</li>
+            <li>Home Credit Bank</li>
+            <li>BI Partners</li>
+            <li>Europharma</li>
+        </ul>
+        <button>View 100 more projects</button>
+    </div>
+    <div class="red">
+        <h1>I-teka</h1>
+        <p>The application is designed to search for drugs by availability in pharmacies in cities.</p>
+        <p>During quarantine, the application helped many people,</p>
+        <p>Which gives more value.</p>
+        <p>Business analysis / iOS / Android/ QA / UI/UX Design</p>
+        <p>Kazakhstan Medicine</p>
+        <h3>400%          +200 000</h3>
+        <p>User growth    Active Users</p>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <div class="red">
+        <h2>Let's discuss</h2>
+        <h2>Your project</h2>
+        <p>Let's figure out how to create an effective application,</p>
+        <p>its cost and terms of its development</p>
+    </div>
+    <div class="red">
+        <form>
+            <label for="num">Best phone number</label>
+            <input type="number" name="num" id="num">
+            <label for="fname">Full name</label>
+            <input type="text" name="fname" id="fname">
+            <input type="submit" value="Discuss the project">
+        </form>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <h1>Application Development Stages</h1>
+    <ul>
+        <li>
+            <div class="blue">
+                <h3>Analysis</h3>
+                <p>We write techincal specifications for</p>
+                <p>development, tacking into account the business</p>
+                <p>process and technologies of customer and</p>
+                <p>the needs of users.</p>
+            </div>
+        </li>
+        <li>
+            <h3>Design</h3>
+            <p>We adapt the customer's corporate identity to the</p>
+            <p>platform guidelines. We draw convenient and</p>
+            <p>understandable interfaces.</p>
+        </li>
+        <li>
+            <h3>Development</h3>
+            <p>We create an extensible architecture, write clean</p>
+            <p>and stable code. We integrate with customer</p>
+            <p>technologies.</p>
+        </li>
+        <li>
+            <h3>Testing</h3>
+            <p>We carry out functional testing and do bug fixes.</p>
+            <p>We adapt the application to different phone</p>
+            <p>resolutions</p>
+        </li>
+        <li>
+            <h3>Launching</h3>
+            <p>We design the application page and publish it in</p>
+            <p>the App Store and Google Play stores.</p>
+        </li>
+        <li>
+            <h3>Support</h3>
+            <p>We monitor the stability of the application, update</p>
+            <p>it for new devices and versions of iOS and</p>
+            <p>Android.</p>
+        </li>
+    </ul>
+</div>
+<hr>
+<div class="green">
+    <div class="red">
+        <h1>Our team</h1>
+        <p>Thousand is a full-cycle digital production company with it's own product analytics,</p>
+        <p>design, web and mobile development.</p>
+        <h1>28 +100 7 years</h1>
+        <p>team members projects in IT sphere</p>
+        <p>All the necessary specialists - from a designer to a tester - are on our staff. We hire</p>
+        <p>the best specialists in the market. It's expensive but worth it</p>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <h1>Get the book for free by leaving your contacts</h1>
+    <div class="red">
+        <form>
+            <label for="numb">Best phone number</label>
+            <input type="number" name="numb" id="numb">
+            <label for="fnameb">Full name</label>
+            <input type="text" name="fnameb" id="fnameb">
+            <input type="submit" value="Send me ebook to my mail">
+        </form>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <h1>FAQ</h1>
+    <div class="red">
+        <div class="blue">
+            <h3>What is the cost of a mobile application?</h3>
+        </div>
+        <h3>Do you provide a guarantee for the mobile application?</h3>
+        <h3>How long will development take?</h3>
+        <h3>I will not tell my idea, do you guarantee confidentiality?</h3>
+    </div>
+</div>
+<hr>
+<div class="green">
+    <h1>IT WEBSITE</h1>
+    <div class="red">
+        <div class="blue">
+            <p>Contact nums +7(778)3959026</p>
+        </div>
+        <p>Post mail@mail.com</p>
+        <p>Address City city, street st.90</p>
+        <p>Leave a request</p>
+    </div>
+    <p>We work throughout the world</p>
+</div>
+</body>
+</html>
